tried to fix gap between two images - failed

--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -120,7 +120,7 @@ ul {
 
 		@include lg {
 			display: grid;
-			grid-template-columns: repeat(4, 1fr);
+			grid-template-columns: repeat(4, 2fr);
 			grid-template-rows: repeat(3, 1fr);
 			grid-template-areas: 
 			"threetacos threetacos juicetacos juicetacos"
